--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.15",
     "pg": "^8.7.1",
     "pg-pool": "^3.4.1",
+    "sequelize": "^6.14.1",
     "sql-migrations": "^1.0.6",
     "swagger-ui-express": "^4.2.0"
   }
